--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.73.6",
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-mask-input": "^1.2.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
